--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -1,7 +1,8 @@
 <div id="forum-template" class="float-left">
   <span class="back-button"><a href="/branch?branch=<%=@branch_name%>">Back To Branch Configure</a></span>
-  <h2><%= forum_type(@branch) %></h2>
-  <input type="hidden" name="branch" id="branch-name" value="<%=@branch_name%>" />
+  <h2><%= forum_type(@branch) %></h3>
+  <span style="font-size: 20px;"><%= @branch.current_forum_session.name %> for Branch <%= @branch.name %></span>
+  <br/><br/><input type="hidden" name="branch" id="branch-name" value="<%=@branch_name%>" />
   <%= render :partial => @temp_partial %>
 </div>
 <div id="forum-upload" class="float-left"></div>
