add jquery recorder

--- a/app/views/templates/_upload.html.erb
+++ b/app/views/templates/_upload.html.erb
@@ -41,7 +41,7 @@
   </div>
   
   <div id="recorder" class='btnUploadWrap recorder'>
-    <%#= render :partial=>'recorder',:locals=>{:template=>template} %>
+    <%= render :partial=>'recorder',:locals=>{:template=>template} %>
   </div>
   
   <div class="btnUploadWrap">
