--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -28,3 +28,28 @@
     sortable.init(<%= @branch.id %>);
   });
 </script>
+<script src="/assets/jRecorder.js"></script>
+<script>
+$(function() { 
+  $.jRecorder({
+	 host:"/templates/record?branch_id=<%= @branch.id%>",
+      callback_started_recording : function() {
+        callback_started();
+      },
+      callback_stopped_recording : function() {
+        callback_stopped();
+      },
+      callback_activityLevel : function(level) {
+        callback_activityLevel(level);
+      },
+      callback_activityTime : function(time) {
+        callback_activityTime(time);
+      },
+      callback_finished_sending : function(time) {
+        // callback_finished_sending()
+        $('#status').html('Audio has been sent to Dropbox');
+      },
+      swf_path:'/inc/jRecorder.swf'
+  });
+});
+</script>
