center healthcheck edit popup window

--- a/app/views/analytics/_content.html.erb
+++ b/app/views/analytics/_content.html.erb
@@ -24,27 +24,28 @@
     <% end %>
   </tbody>
 </table>
+<!--
 <table class="search-results-table tablesorter">
   <thead>
     <tr>
-      <% @country_title.each do |f| %>
+      <%# @country_title.each do |f| %>
       <th>
-        <%= f %>
+        <%#= f %>
       </th>
-      <% end %>
+      <%# end %>
     </tr>
   </thead>
   <tbody>
-    <% @country_rows.each do | row | %>
+    <%# @country_rows.each do | row | %>
     <tr>
-      <% @country_title.each do |f| %>
+      <%# @country_title.each do |f| %>
       <td>
-        <%= row[f] %>
+        <%#= row[f] %>
       </td>
-      <% end %>
+      <%# end %>
     </tr>
-    <% end %>
+    <%# end %>
   </tbody>
 </table>
-
+-->
 
