--- a/app/views/healthcheck/_search.html.erb
+++ b/app/views/healthcheck/_search.html.erb
@@ -27,6 +27,9 @@
           Status
         </th>
         <th>
+          Edit
+        </th>
+        <th>
           Country/Location
         </th>
         <th>
