--- a/app/views/moderation/_search_results.html.erb
+++ b/app/views/moderation/_search_results.html.erb
@@ -105,7 +105,7 @@ To save the order, click the checkbox of the items and click Save
       <%= entry.branch.name %>
    </td>
    <td>
-      <%= entry.branch.active_forum_session.name %>
+      <%= entry.forum_session.name %>
    </td>
    <td>
       <%= entry.created_at.to_s(:db) %>
