remove country, status filters

--- a/app/views/analytics/_new.erb
+++ b/app/views/analytics/_new.erb
@@ -12,7 +12,7 @@
 <div id="report-form-wrapper">
   <div class="report">
     <span class='span-h2'><%= @report_name %></span>
-    <span class='link'><a href="/events">View Full Event Logs</span>
+    <span class='link'><a href="/events">View Full Event Logs</a></span>
     <p id="error" class="error">
       <%= @error %>
     </p>
