not sort by table column

--- a/app/views/healthcheck/_search_results.html.erb
+++ b/app/views/healthcheck/_search_results.html.erb
@@ -21,7 +21,7 @@
 <% end %>
 <script>
    jQuery(document).ready(function(){
-     $('#search-results-id').tablesorter();
+     // $('#search-results-id').tablesorter();
      $('.branch-name-tip').tooltip({
          // this code make line break
          content: function() {
