use jquery player

--- a/app/views/healthcheck/_search.html.erb
+++ b/app/views/healthcheck/_search.html.erb
@@ -31,7 +31,7 @@
           Status
         </th>
         <th>
-          Notification
+          Alarm
         </th>
         <th>
           Country/Location
