--- a/app/views/healthcheck/index.html.erb
+++ b/app/views/healthcheck/index.html.erb
@@ -4,7 +4,9 @@
 <div class="branch-configuration-body">
 <h2>Health Check</h2>
 <%#= render :partial => 'shared/google_map' %>
+<div id="search">
 <%= render :partial => 'search' %>
+</div>
 </div>
 <script>
 	 jQuery(document).ready(function(){
