--- a/app/views/templates/_upload.html.erb
+++ b/app/views/templates/_upload.html.erb
@@ -20,10 +20,6 @@
     <%= flash[:error] %>
   </div>
   
-  <%# if template.kind_of?(Vote)||template.kind_of?(Bulletin) %>
-    <%#= render :partial=>'select_forum', :locals=>{:template=>@template} %>
-  <%# end %>
-  
   <div style="margin: 10px;">
     <input type="radio" name="recording" value="Browse" checked> Browse </input>
     <input type="radio" name="recording" value="Record"> Record</input>
@@ -36,17 +32,15 @@
          You have uploaded a file previously<%= saved %>.
          <br/>
       <% end %>
-      
-  
     Select your <%= template.name_map(template.name) %> audio file to upload</h3>
   <div class='fileBrowseWrap'>
     <%= f.file_field :sound %>
   </div>
-  
+  <!--
   <div id="recorder" class='btnUploadWrap recorder'>
     <%#= render :partial=>'recorder',:locals=>{:template=>template} %>
   </div>
-  
+  -->
   <div class="btnUploadWrap">
     <span><%= submit_tag 'Preview', :id=>"preview", :value=>"Upload",:class=>"btnAction" %></span>
     <% if (template.name=~/_result/) && !!template.audio_link %>
@@ -56,24 +50,11 @@
   </div>
   <div class="clear">
     <% if !!template.audio_link %>
-    <% src="/#{template.audio_link}" %>
-   
-    <object data="<%= src %>" type="application/x-mplayer2" width="300" height="60" autoplay="false">
-      <param name="filename" value="<%= src %>" />
-      <param name="controller" value="true" /> 
-      <param name="autoplay" value="false" />
-      <param name="autostart" value="0" />
-    </object>
-
+      <%= player(template, false) %>
     <% end %>
   </div>
   
 </div>
 <% end %>
 </div>
-<script>
-var record = '<%= template.class.name.downcase%>';
-$(function() { 
-  
-});
-</script>
+
