healthcheck update refresh page

--- a/app/views/templates/_upload.html.erb
+++ b/app/views/templates/_upload.html.erb
@@ -37,9 +37,7 @@
     <%= f.file_field :sound %>
   </div>
   <!--
-  <div id="recorder" class='btnUploadWrap recorder'>
-    <%#= render :partial=>'recorder',:locals=>{:template=>template} %>
-  </div>
+     recorder here
   -->
   <div class="btnUploadWrap">
     <span><%= submit_tag 'Preview', :id=>"preview", :value=>"Upload",:class=>"btnAction" %></span>
