--- a/app/views/templates/_upload_report.html.erb
+++ b/app/views/templates/_upload_report.html.erb
@@ -15,9 +15,7 @@
     <%= f.file_field :sound %>
   </div>
   <!--
-  <div id="recorder" class='btnUploadWrap recorder'>
-    <%#= render :partial=>'recorder' %>
-  </div>
+     recorder here
   -->
   <div class="btnUploadWrap">
     <span><%= submit_tag 'Preview', :id=>"preview-report", :value=>"Upload",:class=>"btnAction" %></span>
