--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -8,5 +8,10 @@
     // jquery combobox for Voting Session Name 
     // create or select
     $("[id*='identifier']").combobox();
+    $(".audio, .audio2").mb_miniPlayer({
+       width:100,
+       inLine:false,
+       id3:false
+  });
   });
 </script>
