--- a/app/views/templates/_bulletin.html.erb
+++ b/app/views/templates/_bulletin.html.erb
@@ -4,5 +4,5 @@
 <div style="width:200px;height:10px;border-top: 1px solid #CCC;"></div>
 <!--
 <div id="moderate" class="square"><span>Moderate</span></div>
-<div id="record_bulletin_board" class="square"><%= @record_bulletin %></div>
 -->
+<div id="record_message" class="square"><span><%= @record %></span></div>
