--- a/app/views/layouts/moderation.html.erb
+++ b/app/views/layouts/moderation.html.erb
@@ -45,6 +45,7 @@
   jQuery(document).ready(function(){
     homePage.init("content");
     loadSoundCloud.init();
+    autoRefreshHeader.init();
 // contact.init();
      $(".audio").mb_miniPlayer({
        width:240,
