--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,8 +2,9 @@
 <ul>
 <li class="left-nav-bar" data-url="/analytics"><a id="calls"><%= @calls[:total] %> Number of Calls</a></li>
 <li class="left-nav-bar" data-url="/moderation"><a id="messages"><%= @messages[:total] %> Messages</a></li>
-<li class="left-nav-bar" data-url="/moderation"><a id="new_messages"><%= @messages[:new] %> NEW</a></li>
-
+<!--
+<li class="left-nav-bar" data-url="/moderation"><a id="new_messages"><%#= @messages[:new] %> NEW</a></li>
+-->
 <li><span class="last-days">(from last <%= Branch.message_time_span %> days)</span></li>
 <li><span class="last-days"></span></li>
 <li class="left-nav-bar" data-url="/healthcheck?alarm=1"><a id="alerts"><%= @alerts[:unique] %> Alerts</a></li>
