change ivr logo

--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -1,5 +1,5 @@
 <ul>
-<li><a href="/" class="logo"><img class="oddi-logo" src="/assets/images/oddi-logo.png"/></a></li>
+<li><a href="/" class="logo"><img class="oddi-logo" src="/assets/images/rivr-logo.jpeg"/></a></li>
 <!-- li><a href="#" class="login">Log in or Sign up</a></li -->
 <% if @klass=='branch-configuration-on'%>
 <li class="left-nav-bar" data-klass="branch-configuration-on" data-url="/branch"><a class="<%= @klass %>">Branch Configuration</a></li>
