fix typo Privew

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -48,7 +48,7 @@
         <a href="#">Select Forum</a>
       </li>
       <li id="preview-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="/branch/preview_forum">
-        <a href="#">Privew Voice Forum</a>
+        <a href="#">Preview Voice Forum</a>
       </li>
       <li id="activate-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="/branch/activate_forum">
         <a href="#">Activate Forum</a>
@@ -79,7 +79,7 @@
   <div id="TabbedPanels2" class="TabbedPanels">
     <ul class="TabbedPanelsTabGroup">
       <li id="preview-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="/branch/preview_forum">
-        <a href="#">Privew Voice Forum</a>
+        <a href="#">Preview Voice Forum</a>
       </li>
     </ul>
   </div>
