add simple forum

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -41,7 +41,9 @@
       <li id="bulletin" class="TabbedPanelsTab syndicate" tabindex="0">
         <a href="#"><%= Branch.forum_type_ui('bulletin') %></a>
       </li>
-      
+      <li id="simple" class="TabbedPanelsTab syndicate" tabindex="0">
+        <a href="#"><%= Branch.forum_type_ui('simple') %></a>
+      </li>
       <!--
       <li class="vertical-line"></li>
       <li id="select-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="/branch/select_forum">
