add auto schedule forum

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -21,6 +21,7 @@
 
   <br/><br/><input type="hidden" name="branch" id="branch-name" value="<%=@branch_name%>" />
   <%= render :partial => @temp_partial %>
+  <%= render :partial => 'schedule' %>
 </div>
 <div id="forum-upload" class="float-left"></div>
 <div id="validate-forum" class="helpPopUp"></div>
